Change baseURL for development

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https://www.georgeho.org"
+baseURL = "http://www.georgeho.org/georgeho/"
 
 # The name of this wonderful theme ;-).
 theme = "hugo-bearblog"
