--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ baseURL = "https://www.georgeho.org"
 theme = "hugo-bearblog"
 
 # Basic metadata configuration for your blog.
-title = "⁂ George Ho"
+title = "George Ho"
 author = "George Ho"
 copyright = "Copyright © 2022, George Ho."
 languageCode = "en-US"
