--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,10 +1,11 @@
-name: github pages
+name: Build and Deploy GitHub Pages
 
 on:
   push:
     branches:
       - main  # Set a branch to deploy
-  pull_request:
+  schedule:
+      - cron: "30 13 * * *"  # Every 13:30 UTC, 08:30 EST, 09:30 EDT
 
 jobs:
   deploy:
